build(calendar): make sure that header spacing uses gap not margin, fix some disabled color issue

--- a/src/app/calendar/calendar.sample.scss
+++ b/src/app/calendar/calendar.sample.scss
@@ -50,7 +50,7 @@ small {
         padding: $padding;
         gap: $padding;
         overflow: auto;
-        flex: 1;
+        flex-grow: 1;
     }
 
     &__settings {
